Bug 470907 Thunderbird always uses port 119 for NNTP, ignoring port configured in server settings. r/sr=bienvenu