mailnews/news/src/nsNNTPNewsgroupList.cpp
@@ -1,4 +1,4 @@
-/* -*- Mode: C++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
+/* -*- Mode: C++; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*- */
 /* ***** BEGIN LICENSE BLOCK *****
  * Version: MPL 1.1/GPL 2.0/LGPL 2.1
  *
@@ -170,7 +170,7 @@ nsNNTPNewsgroupList::CleanUp()
   // db, then we should mark it read in the unread set.
   if (m_newsDB)
   {
-    if (m_knownArts.set)
+    if (m_knownArts.set && m_knownArts.set->getLength() && m_set->getLength())
     {
       nsCOMPtr <nsIDBFolderInfo> folderInfo;
       m_newsDB->GetDBFolderInfo(getter_AddRefs(folderInfo));
